tests/neg/i16653.scala
import demo.implicits._ // error
import demo._
object Demo {}